# xcbuild

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt
Libraries/acdriver/: CMakeLists.txt
Libraries/builtin/: CMakeLists.txt
Libraries/dependency/: CMakeLists.txt
Libraries/ext/: CMakeLists.txt
Libraries/graphics/: CMakeLists.txt
Libraries/libbom/: CMakeLists.txt
Libraries/libcar/: CMakeLists.txt
Libraries/libutil/: CMakeLists.txt
Libraries/ninja/: CMakeLists.txt
Libraries/pbxbuild/: CMakeLists.txt
Libraries/pbxproj/: CMakeLists.txt
Libraries/pbxsetting/: CMakeLists.txt
Libraries/pbxspec/: CMakeLists.txt
Libraries/pbxspec/Sources/PBX/: FileType.cpp
Libraries/plist/: CMakeLists.txt
Libraries/plist/Tools/: PlistBuddy.cpp
Libraries/process/: CMakeLists.txt
Libraries/xcassets/: CMakeLists.txt
Libraries/xcassets/Sources/Slot/: SystemVersion.cpp
Libraries/xcdriver/: CMakeLists.txt
Libraries/xcexecution/: CMakeLists.txt
Libraries/xcformatter/: CMakeLists.txt
Libraries/xcscheme/: CMakeLists.txt
Libraries/xcsdk/: CMakeLists.txt
Libraries/xcsdk/Sources/SDK/: PlatformVersion.cpp
Libraries/xcworkspace/: CMakeLists.txt
src/: CMakeLists.txt
src/acdriver/: CMakeLists.txt
src/builtin/: CMakeLists.txt
src/dependency/: CMakeLists.txt
src/ext/: CMakeLists.txt
src/graphics/: CMakeLists.txt
src/libbom/: CMakeLists.txt
src/libbom/Tools/: dump_bom.c
src/libcar/: CMakeLists.txt
src/libcar/Sources/: AttributeList.cpp
src/libutil/: CMakeLists.txt
src/libutil/Headers/libutil/: Filesystem.h
src/ninja/: CMakeLists.txt
src/pbxbuild/: CMakeLists.txt
src/pbxproj/: CMakeLists.txt
src/pbxsetting/: CMakeLists.txt
src/pbxspec/: CMakeLists.txt
src/plist/: CMakeLists.txt
src/process/: CMakeLists.txt
src/process/Sources/: DefaultContext.cpp
src/xcassets/: CMakeLists.txt
src/xcdriver/: CMakeLists.txt
src/xcexecution/: CMakeLists.txt
src/xcformatter/: CMakeLists.txt
src/xcscheme/: CMakeLists.txt
src/xcsdk/: CMakeLists.txt
src/xcsdk/Sources/SDK/: PlatformVersion.cpp  Product.cpp
src/xcworkspace/: CMakeLists.txt
src/xcyaml/: CMakeLists.txt
src/xcyaml/Headers/xcyaml/: Project.h  yaml-conversion.h
src/xcyaml/Sources/: Project.cpp
